--- a/src/ILICheck.Web/ClientApp/package.json
+++ b/src/ILICheck.Web/ClientApp/package.json
@@ -13,7 +13,6 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.4",
     "react-icons": "^4.2.0",
-    "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
@@ -40,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^4.0.3"
   }
 }
